--- a/src/index.html
+++ b/src/index.html
@@ -16,12 +16,12 @@
 
     <div class="main_content">
         <header class="text-center">
-            <h1><a href="/"> Plug TEST</h1></a>
+            <h1><a href="/"> Plug Inspection</h1></a>
         </header>
         <div class="total_info text-center">
 <form id="reset-form">
     <input type="text" name="name" value="refresh" disabled="disabled"><input type="text" name="plug" value="SN" disabled="disabled">
-    <button id="button1" type="submit">Push Me!</button>
+    <button id="button1" type="submit">重新整理</button>
 </form>
 	
 <h2>Contact Form</h2>		
@@ -29,11 +29,11 @@
     Name<br>
     <input type="text" name="name" required>
     <br>
-    Plug<br>
+    Power Cord<br>
     <input type="text" name="plug" required>
     <br>
     <br><br>
-    <button  id="button2" type="submit">Submit</button>
+    <button  id="button2" type="submit">送出</button>
 </form>
         </div>
 <div id="message401" style="display: none">
@@ -64,11 +64,11 @@
                 <div class="Tests">
                     <h4 class="text-center">Test Cases</h4>
     <p>
-        Name:
+        姓名:
         <b id="message1">...</b>
     </p>
     <p>
-        pluginput:
+        料號輸入:
         <b id="message2">...</b>
     </p> 
                 </div>
@@ -84,15 +84,15 @@
         <b id="message4">...</b>
     </p>  	
     <p>
-        plugtest:
+        比對結果:
         <b id="message5">...</b>
     </p>
     <p>
-        plugmemo:
+        拍攝時間:
         <b id="message6">...</b>
     </p> 
     <p>
-        Created_On:
+        輸入時間:
         <b id="message7">...</b>
     </p>
             </div>
